[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemies/death_zone.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/trigger_zone.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/bullet.png" type="Texture" id=3]
[ext_resource path="res://enemies/bullet.gd" type="Script" id=4]
[ext_resource path="res://player/player_future_shader.tres" type="Material" id=5]
[ext_resource path="res://assets/audio/bullet.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="CircleShape2D" id=2]
radius = 5.09902

[node name="bullet" type="KinematicBody2D"]
material = ExtResource( 5 )
script = ExtResource( 4 )

[node name="particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
explosiveness = 0.2
randomness = 1.0
local_coords = false
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
angle_random = 1.0
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 0.411765, 0.929412, 0.407843, 1 )
hue_variation = 0.16
hue_variation_random = 1.0

[node name="trigger_zone" parent="." instance=ExtResource( 2 )]

[node name="death_zone" parent="." instance=ExtResource( 1 )]

[node name="shape" parent="death_zone" index="0"]
shape = SubResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="sprite" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 3 )

[node name="lifetime" type="Timer" parent="."]

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -7.0
pitch_scale = 0.75

[connection signal="area_entered" from="trigger_zone" to="." method="_on_trigger_zone_area_entered"]
[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]

[editable path="trigger_zone"]
[editable path="death_zone"]
